--- a/app/src/main/res/layout/activity_exercice4.xml
+++ b/app/src/main/res/layout/activity_exercice4.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Exercice4Activity">
+    tools:context=".Exercice4Activity"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        />
 
 </LinearLayout>
